--- a/views/about.handlebars
+++ b/views/about.handlebars
@@ -1,5 +1,5 @@
 <h1>
-    About Meadowlark Travel
+   <a href="/contact">About Meadowlark Travel</a> 
 </h1>
 <p>Your fortune for the day:</p>
 <blockquote>{{ fortune }}</blockquote>
