--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,11 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Meadowlark Travel</title>
+    <!-- 最新版本的 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/css/bootstrap.min.css"
+     integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+      crossorigin="anonymous">
+    {{#each _bundles.css}}
+        <link rel="stylesheet" href="{{static .}}">
+    {{/each}}
+    {{!-- <link rel="stylesheet" href="{{static '/css/meadowlark.min.d41d8cd9.css'}}"> --}}
+    <script src="//code.jquery.com/jquery-2.0.2.min.js"></script>
+    <!-- 最新的 Bootstrap 核心 JavaScript 文件 -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@3.3.7/dist/js/bootstrap.min.js"
+     integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
+      crossorigin="anonymous"></script>
+      {{!-- <script src="{{static '/js/meadowlark.min.288725e9.js'}}"></script> --}}
+    {{#each _bundles.js.head}}
+        <script src="{{static .}}"></script>
+    {{/each}}
+    {{#if showTests}}
+        <link rel="stylesheet" href="/vendor/mocha.css">
+    {{/if}}
 </head>
 <body>
     <header>
-        <img src="/img/logo.png" alt="Meadowlark Travel Logo">
+       <div class="row">
+				<div class="col-sm-4">
+					<img src="{{logoImage}}" alt="Meadowlark Travel Logo">
+				</div>
+				<div class="col-sm-2 pull-right">
+					{{! The following represents a lot of code duplication, so we will probably want to
+						change this in the future }}
+					{{#if cartItems}}
+						<a href="/cart"><img class="cartIcon" src="{{static '/img/shop/cart_full.png'}}"
+							alt="Cart Empty"></a>
+					{{else}}
+						<a href="/cart"><img class="cartIcon" src="{{static '/img/shop/cart_empty.png'}}"
+							alt="Cart Contains {{cartItems}} Items"></a>
+					{{/if}}
+				</div>
+			</div>
     </header>
+    {{#if flash}}
+        <div class="alert alert-dismissible alert-{{flash.type}}">
+            <button class="close" type="buton" data-dismiss="alert" aria-hidden="true">&times;</button>
+            <strong>{{flash.intro}}</strong>{{{flash.message}}}
+        </div> 
+    {{/if}}
     {{{ body }}}
+    {{!-- {{{_sections.jquery}}} --}}
+    {{#if showTests}}
+        <div id="mocha"></div>
+        <script src="/vendor/mocha.js"></script>
+        <script src="/vendor/chai.js"></script>
+        <script>
+            mocha.setup({ui: 'tdd'});
+            var assert = chai.assert;
+        </script>
+        <script src="/qa/tests-global.js"></script>
+        {{#if pageTestScript}}
+            <script src="{{pageTestScript}}"></script>
+        {{/if}}
+        <script>mocha.run();</script>
+    {{/if}}
+    <script>
+        var IMG_CART_EMPTY = "{{static '/img/shop/cart_empty.png' }}";
+        var IMG_CART_FULL = "{{static '/img/shop/cart_full.png' }}";
+        var cart = (function() {
+            // normally we would get this from an AJAX call, or some similar method
+            var items = Array({{cartItems}});
+            return {
+                items: items,
+                isEmpty: function() {
+                    return !items.length;
+                },
+                addItem: function(id) {
+                    items.push(id);
+                    $(document).trigger('meadowlark_cart_changed');
+                }
+            };
+        })();
+        $(document).ready(function () {
+            $(document).on('meadowlark_cart_changed', function () {
+                $('header img.cartIcon').attr('src', cart.isEmpty()? IMG_CART_EMPTY: IMG_CART_FULL);
+            });
+        });
+        setTimeout(function () {
+            cart.addItem(2);
+            console.log('cart added!');
+        },5000);
+    </script>
 </body>
 </html>
